# varys

./: .env  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix  local.varys.plist
.run/: Database.run.xml  Doctests.run.xml  Run Alexa setup.run.xml  Run Alexa test.run.xml  Run Siri interact.run.xml  Run Siri setup.run.xml  Run Siri test.run.xml  Run calibration.run.xml  Run demo.run.xml  Run listen (opus).run.xml  Run listen (wav).run.xml  Run listen.run.xml  Run parrot (opus).run.xml  Run parrot (wav).run.xml  Run parrot.run.xml  Run plot.run.xml  Run sniff.run.xml  Run sniffer.run.xml  Run test queries (Alexa).run.xml  Run test queries with multiple voices.run.xml  Run test queries.run.xml  Run testing.run.xml  Run training.run.xml  Run with multiple voices.run.xml  Run.run.xml
.sqlx/: query-53f85660f41e3d5f452411237e6bd3ea56ccbf1cb0f9290680a9837f208bea53.json  query-5dfb9b2a4dedcadbd2d4feaf214b24f1a4833ce1b2a61bf8fd1021aa81df8ba2.json  query-8255e11b587dab141e3311fcb769769514450a667f03fc3f5eee0cda89e9afe6.json  query-9353456350b86986bd5cc96dbe41ac2ac5ecd4c810a3e5526eefa8fa71efba4c.json  query-a6eaafe8b05b54b103f689b69b48d24da6d2b24c2f7dce0bf80d93f349248131.json  query-ab110bb03f5388aec1a7adb327d9f439baeb6df999dfb95091f9f2ee4bbe5a61.json  query-bd5c7a022497e1267943d843b3eb6f77b54a7406ec22fb9ad602361569e29028.json  query-df44d7e04a6788a069012f3cfee7279c0bee1026db6aa45f68073ed912b88033.json  query-ff4d2493261a37ae2a31f23816fac9ab0e97fb4e2209aa374164bc5a8ffba5fd.json
data/: queries-binary.toml  queries-small.toml  queries.toml  queries.txt  test_queries.toml  test_queries.txt
migrations/: 0001_create_interactions_table.sql  0001_main_migration.sql  0002_query_category.sql  0003_query_file.sql  20230912073731_interaction.sql  20230912073731_interaction_and_session.sql
speaker/: Cargo.toml
speaker/src/: lib.rs
src/: assistant.rs  cli.rs  compression.rs  database.rs  error.rs  file.rs  lib.rs  listen.rs  main.rs  monitoring.rs  recognise.rs  sniff.rs  speak.rs
src/assistant/: alexa.rs  interactor.rs  siri.rs
src/cli/: arguments.rs  interact.rs  key_type.rs
src/database/: interaction.rs  interactor_config.rs  query.rs  session.rs
src/file/: audio.rs
src/listen/: audio.rs
src/recognise/: transcribe.rs  transcriber.rs
varys/: Cargo.toml
varys-analysis/: Cargo.toml
varys-analysis/src/: error.rs  lib.rs  ml.rs  plot.rs  trace.rs
varys-analysis/src/ml/: activation.rs  cnn.rs  data.rs
varys-analysis/src/ml/cnn/: inference.rs  training.rs
varys-analysis/src/ml/data/: binary.rs  numeric.rs
varys-analysis/src/ml/model/: cnn.rs
varys-audio/: Cargo.toml
varys-audio/src/: audio.rs  error.rs  file.rs  lib.rs  listen.rs  stt.rs  tts.rs
varys-audio/src/stt/: transcribe.rs  transcriber.rs
varys-database/: Cargo.toml
varys-database/migrations/: 0001_main_migration.sql  0004_interaction_mac_address.sql  0004_session_mac_address.sql  0005_remove_gz_extensions.sql
varys-database/src/: connection.rs  database.rs  error.rs  file.rs  lib.rs
varys-database/src/database/: interaction.rs  interactor_config.rs  session.rs
varys-network/: Cargo.toml
varys-network/src/: address.rs  error.rs  lib.rs  packet.rs  sniff.rs
varys/src/: assistant.rs  cli.rs  compression.rs  database.rs  dataset.rs  error.rs  file.rs  lib.rs  main.rs  monitoring.rs  query.rs  recognise.rs  sniff.rs  speak.rs
varys/src/assistant/: alexa.rs  interactor.rs  siri.rs
varys/src/cli/: arguments.rs  export.rs
varys/src/database/: interaction.rs  query.rs
varys/src/listen/: audio.rs
varys/src/recognise/: transcribe.rs  transcriber.rs
