[package]
name = "varys"
version = "0.2.0"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "Spying on smart speakers."
license = "MIT"
publish = false

[dependencies]
speaker = { path = "speaker" }
log = "0.4.18"
pretty_env_logger = "0.5.0"
thiserror = "1.0.40"
# listen
cpal = "0.15.2"
hound = "3.5.0"
# recogniser
whisper-rs = "0.8.0"
