[package]
name = "varys"
version = "0.5.2"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "Spying on smart speakers."
license = "MIT"
publish = false

[dependencies]
log = "0.4.18"
pretty_env_logger = "0.5.0"
thiserror = "1.0.40"
chrono = "0.4.26"
rand = "0.8.5"
# cli
clap = { version = "4.3.1", features = ["derive"] }
crossterm = "0.27.0"
colored = "2.0.0"
# listen
cpal = "0.15.2"
hound = "3.5.0"
ogg = "0.9.0"
audiopus = "0.3.0-rc.0"
simple_moving_average = "0.1.2"
# recognise
whisper-rs = "0.8.0" # enable coreml: whisper-rs = { version = "0.8.0", features = ["coreml"] }
# speak
tts = "0.25.3"
lerp = "0.5.0"
# sniff
pcap = "1.1.0"
flate2 = "1.0.26"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
# speak
cocoa-foundation = "0.1.1"
core-foundation = "0.9.3"
libc = "0.2.144"
objc = "0.2.7"
