[package]
name = "speaker"
version = "0.1.0"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "A simple wrapper for tts."
publish = false

[dependencies]
log = "0.4"
thiserror = "1.0"
tts = "0.25.3"
lerp = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa-foundation = "0.1"
core-foundation = "0.9"
libc = "0.2"
objc = "0.2"
