[package]
name = "varys-analysis"
version = "0.2.0"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "Traffic analysis for varys."
license = "MIT"
publish = false

[dependencies]
varys-database = { path = "../varys-database" }
varys-network = { path = "../varys-network" }
log = "0.4.20"
thiserror = "1.0.56"
chrono = "0.4.32"
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.113"
burn = { version = "0.12.1", features = ["train", "wgpu"] }
plotters = "0.3.5"
