[package]
name = "varys-audio"
version = "0.10.0"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "Audio recording, transcription and stt for varys."
license = "MIT"
publish = false

[dependencies]
log = "0.4.20"
thiserror = "1.0.56"
rand = "0.8.5"
# listen
cpal = "0.15.2"
hound = "3.5.1"
ogg = "0.9.1"
audiopus = "0.3.0-rc.0"
simple_moving_average = "1.0.1"
# tts
tts = "0.25.6"
lerp = "0.5.0"
# stt
whisper-rs = "0.10.0" # coreml: { version = "0.10.0", features = ["coreml"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
# tts
cocoa-foundation = "0.1.1"
core-foundation = "0.9.3"
libc = "0.2.144"
objc = "0.2.7"