[package]
name = "varys-database"
version = "0.10.0"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "Storing interactions in a database with varys."
license = "MIT"
publish = false

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
thiserror = "1.0.56"
chrono = "0.4.32"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "time", "chrono"] }
