[package]
name = "varys"
version = "0.10.1"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "Spying on smart speakers."
license = "MIT"
publish = false

[dependencies]
varys-database = { path = "../varys-database" }
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
thiserror = "1.0.56"
chrono = "0.4.32"
rand = "0.8.5"
reqwest = "0.11.23"
# cli
clap = { version = "4.4.18", features = ["derive", "cargo"] }
crossterm = "0.27.0"
colored = "2.1.0"
toml = "0.8.8"
dotenvy = "0.15.7"
# listen
cpal = "0.15.2"
hound = "3.5.1"
ogg = "0.9.1"
audiopus = "0.3.0-rc.0"
simple_moving_average = "1.0.1"
# recognise
whisper-rs = "0.10.0" # coreml: { version = "0.10.0", features = ["coreml"] }
# speak
tts = "0.25.6"
lerp = "0.5.0"
# sniff
pcap = "1.2.0"
flate2 = "1.0.28"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
# speak
cocoa-foundation = "0.1.1"
core-foundation = "0.9.3"
libc = "0.2.144"
objc = "0.2.7"
