[package]
name = "varys"
version = "0.11.1"
edition = "2021"
authors = ["Milan van Zanten <milan@milan.wtf>"]
description = "Spying on smart speakers."
license = "MIT"
publish = false

[dependencies]
varys-database = { path = "../varys-database" }
varys-audio = { path = "../varys-audio" }
varys-network = { path = "../varys-network" }
varys-analysis = { path = "../varys-analysis" }
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
thiserror = "1.0.56"
chrono = "0.4.32"
rand = "0.8.5"
reqwest = "0.11.23"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
crossterm = "0.27.0"
colored = "2.1.0"
toml = "0.8.8"
dotenvy = "0.15.7"
